<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.firstScreen.FirstScreenActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/iconProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconProfile"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/rounded_corner_white"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/name"
            android:lines="1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/palindromeInput"
            android:layout_width="330dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/rounded_corner_white"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/palindrome"
            android:lines="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/palindromeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/message"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input">

        <Button
            android:id="@+id/palindromeCheck"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:background="@drawable/rounded_corner_green"
            android:fontFamily="@font/poppins_regular"
            android:paddingHorizontal="10dp"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner_green"
            android:fontFamily="@font/poppins_regular"
            android:paddingHorizontal="10dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>